fix dark mode banner text color (#1459)

--- a/src/components/atoms/AnnouncementBanner.module.css
+++ b/src/components/atoms/AnnouncementBanner.module.css
@@ -12,6 +12,7 @@
 
 .banner.warning {
   background-color: var(--brand-alert-yellow);
+  color: var(--brand-black);
 }
 
 .banner.success {
